# AnimeConverterBot

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
bot/: base.py  register.py  utils.py
bot/filter/: admin.py  chat_subscriber.py
bot/handler/: bot_blocked.py  cancel_state.py  chat_join.py  converter.py  help.py  shout.py  start.py  stats.py  subscriber.py
bot/handler/chat_join/: approve.py  text_join_chat.py
bot/handler/convert_photo/: converter.py  message_after_photo.py
bot/keyboards/reply/: cancel_state.py
database/: base.py  models.py  service.py
settings/: config.py  log_config.py
