[tool.poetry]
name = "animeconverterbot"
version = "0.1.0"
description = ""
authors = ["Andrew <vesell4123@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
requests = "^2.28.2"
environs = "^9.5.0"
sqlalchemy = "1.4.47"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
